Issue #3028675 by bskibinski, joelpittet, gnuschichten, alexpott, lauriii: Vertical Tabs are unnecessarily hiding content with overflow: hidden
(cherry picked from commit aa4dda49a9fd280c7dea86b41dbfaa886e6d6df4)

--- a/core/themes/seven/css/components/vertical-tabs.css
+++ b/core/themes/seven/css/components/vertical-tabs.css
@@ -5,7 +5,6 @@
 
 .vertical-tabs {
   position: relative;
-  overflow: hidden;
   margin: 10px 0;
   border: 1px solid #bdbdbd;
   border-radius: 4px;
@@ -16,6 +15,7 @@
   width: 240px;
   margin: 0 -100% -1px 0; /* LTR */
   padding: 0;
+  list-style-type: none;
   border-bottom: 1px solid #ccc;
   line-height: 1;
 }
@@ -36,6 +36,13 @@
 }
 .vertical-tabs__menu-item.last {
   border-bottom: none;
+}
+.vertical-tabs__menu-item.first a {
+  border-top-left-radius: 4px; /* LTR */
+}
+[dir="rtl"] .vertical-tabs__menu-item.first a {
+  border-top-left-radius: 0;
+  border-top-right-radius: 4px;
 }
 [dir="rtl"] .vertical-tabs__menu-item.is-selected {
   border-right: none;
@@ -93,11 +100,14 @@
   margin: 0 0 0 240px; /* LTR */
   padding: 10px 15px 10px 15px;
   border-left: 1px solid #a6a5a1; /* LTR */
+  border-top-right-radius: 4px; /* LTR */
+  border-bottom-right-radius: 4px; /* LTR */
 }
 [dir="rtl"] .vertical-tabs__panes {
   margin: 0 240px 0 0;
   border-right: 1px solid #a6a5a1;
   border-left: none;
+  border-radius: 4px 0 0 4px;
 }
 .vertical-tabs__panes:after {
   display: table;
